# KeMotion-ROS-Teach-Pendant

./: .gitignore  LICENSE  README.md  README_Chinese.md
er12_description/: CMakeLists.txt  package.xml
er12_description/config/: er12.rviz
er12_description/launch/: er12.launch
er12_description/urdf/er12_support/: er12.urdf  er12.urdf.xacro  er12.xacro
er12_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
er12_moveit_config/config/: er12.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
er12_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
er7_description/: CMakeLists.txt  package.xml
er7_description/config/: er7.rviz
er7_description/launch/: er7.launch
er7_description/urdf/er7_support/: er7.urdf  er7.urdf.xacro  er7.xacro
er7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
er7_moveit_config/config/: er7.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
er7_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rmi_driver-DigitalIO/rmi_driver/: CMakeLists.txt
rmi_driver-DigitalIO/rmi_driver/config/: rmi_driver_config.yaml
rtp_gui/: CMakeLists.txt  package.xml
rtp_gui/cfg/: RtpDynamicReconfigure.cfg
rtp_gui/include/rtp_gui/: rtp_data_type.h  rtp_gui.h  rtp_gui_const.h  rtp_manager.h  rtp_teleop.h
rtp_gui/launch/: demo.launch  joint_state_publisher.launch
rtp_gui/src/gui/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
rtp_gui/src/nodes/: main.cpp  rtp_data_type.cpp  rtp_manager.cpp  rtp_teleop.cpp
rtp_msgs/: CMakeLists.txt  package.xml
rtp_msgs/msg/: RobotMoveCommand.msg  RobotMoveCommands.msg
rtp_msgs/srv/: RobotMove.srv
voice_control/: CMakeLists.txt  package.xml
voice_control/launch/: demo.launch
voice_control/src/: iat_online_record_sample.cpp  iat_voice_control.cpp  linuxrec.c  speech_recognizer.c
(+2 files in other folders)
